@@ -2413,6 +2413,13 @@ command to generate the output files.
     <expanded-acronym>Windows Icon</expanded-acronym>
     <glob pattern="*.ico"/>
   </mime-type>
+  <mime-type type="image/x-icns">
+    <_comment>MacOS X icon</_comment>
+    <glob pattern="*.icns"/>
+    <magic priority="50">
+      <match type="string" value="icns" offset="0"/>
+    </magic>
+  </mime-type>
   <mime-type type="image/x-iff">
     <_comment>IFF image</_comment>
     <glob pattern="*.iff"/>
