@@ -1,3 +1,7 @@
+2007-01-12  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml.in: Add image/x-icns mime-type for MacOS X icons
+
 2007-01-05  Bastien Nocera  <hadess@hadess.net>
 
 	* freedesktop.org.xml.in: Add *.kar (Karaoke files) as a pattern for
